# chess-engine

./: 162b349c-763d-4524-b8d9-5a4c527206e1.json  19463dfa-3514-45f8-8907-29ae452b9225.json  1db89570-0072-4177-a6d9-d754d4f50ca8.json  72935744-9548-49f8-a6d4-8de0b8a3afcf.json  8c6ecc28-e304-4b60-894e-22a7e0fd7bd8.json  Cargo.toml  af0eb3f2-9ac0-4f7c-804e-2cfb4e7e5a38.json  castle-test.json  d4a6f13d-f366-4618-89c3-aee0bd8933e0.json  d8d2ac49-9593-4658-aa16-8feac4eb9644.json  debf6d00-1a80-4fd8-a246-d61cff5f6517.json  f71066e5-a3c1-4f42-88da-c2ace4efa7d2.json  king-in-check.json  king-in-checkmate-final.json  king-in-checkmate.json
console/: Cargo.toml
console/src/: main.rs
engine/: Cargo.toml
engine/src/: chess_match.rs  lib.rs  match_helpers.rs  move_resolver.rs  movement_log.rs  piece_base.rs  piece_location.rs
